samples/_failures_safe/1761634909_79457a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9b38a09.c: In function ‘main’:
./samples/SAFE/__tmp_f9b38a09.c:155:9: error: expected expression at end of input
  155 |         } else if (success ==
      |         ^
./samples/SAFE/__tmp_f9b38a09.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9b38a09.c:155:9: error: expected declaration or statement at end of input
